[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyStarBoss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.2635, 16.2635 )

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -7.15256e-07, 5.96046e-07 )
rotation = 0.785398
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="BulletSpawn1" parent="ShootDirection" index="0"]
position = Vector2( 24, 0 )

[node name="BulletSpawn2" type="Position2D" parent="ShootDirection" index="1"]
position = Vector2( 21, -5 )

[node name="BulletSpawn3" type="Position2D" parent="ShootDirection" index="2"]
position = Vector2( 21, 5 )

[node name="Body" parent="." index="4"]
scale = Vector2( 3, 3 )

[node name="Border" parent="Body" index="0"]
position = Vector2( 5.96046e-08, 5.96046e-08 )
scale = Vector2( 1.17954, 1.17954 )

[node name="Inside" parent="Body" index="1"]
position = Vector2( 6.875, 6.875 )
scale = Vector2( 1.375, 1.375 )
offset = Vector2( -5, -5 )
polygon = PoolVector2Array( 8, -8, 3, 0, 8, 8, 0, 4, -8, 8, -3, 0, -8, -8, 0, -4 )

[node name="Inside2" type="Polygon2D" parent="Body" index="2"]
position = Vector2( 3, 3 )
scale = Vector2( 0.6, 0.6 )
offset = Vector2( -5, -5 )
antialiased = true
polygon = PoolVector2Array( 10, -10, 3, 0, 10, 10, 0, 4, -10, 10, -3, 0, -10, -10, 0, -4 )

[node name="Healthbar" parent="." index="5"]
scale = Vector2( 2.5, 1 )

[node name="EnemyHealthbar" parent="Healthbar" index="0"]
margin_top = -44.0
margin_bottom = -39.0
